<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="data" type="site.aoba.android.vot.ui.login.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginFragment">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_userid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                app:errorEnabled="@{true}"
                bind:validation='@{@string/regex_user_id}'
                bind:errorMessage="@{@string/login_fragment_login_userid_error}"
                app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:text="@={data.userId}"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_userid"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                app:errorEnabled="true"
                bind:validation='@{@string/regex_password_length}'
                bind:errorMessage="@{@string/login_fragment_login_password_error}"
                app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={data.password}"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="@string/login_fragment_login_button"
                android:enabled="@{!data.isConnecting}"
                style="@style/Widget.MaterialComponents.Button"
                android:onClick="@{(x) -> data.Login(x)}"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>